# sentiment-analysis

./: 1app.py  README.md  app.py  app1.py  contact.html  engineering_colleges_reviews.csv  feedback.db  feedback.html  feedback1.db  flask_app.py  flask_users.db  graph.py  index.html  index2.html  login.html  lr_model.pkl  model.pkl  model.py  model1.py  model2.py  portfolio.html  pyproject.toml  requirements.txt  reviews.html  sentiment_result.csv  svm_model.pkl  vector.pkl  vectorizer.pkl  vercel.json
static/: styles.css
templates/: Forgot Password.html  error.html  feedback.html  index.html  index2.html  keyword_reviews.html  loading.html  login & signup.html  logo.py  overview.html  reset_password.html  result  result.html  result1.html  signup.html  team.html
